@startuml
class Animal {
    - name: String
    - age: int
    - habitat: String
    - isEndangered: boolean
    + feed(): void
    + makeSound(): void
}

class Mammal {
    + hasFur: boolean
}

class Bird {
    + canFly: boolean
}

class Fish {
    + canSwim: boolean
}

Animal <|-- Mammal
Animal <|-- Bird
Animal <|-- Fish
@enduml